[gd_scene load_steps=10 format=3 uid="uid://dnpmm2gxfqdpr"]

[ext_resource type="Texture2D" uid="uid://blfbwuov0x8ma" path="res://MenuBG.png" id="1_7vrkn"]
[ext_resource type="Script" uid="uid://cw7gifjns03jm" path="res://main_menu.gd" id="1_fu7sn"]
[ext_resource type="FontFile" uid="uid://bgj6dpb4kmscg" path="res://GRAMES.ttf" id="2_fu7sn"]
[ext_resource type="AudioStream" uid="uid://bg28i30nkx2il" path="res://sound/Rijko â€” Letters from Myself (www.hotplayer.ru).mp3" id="4_jix8l"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jix8l"]
texture = ExtResource("1_7vrkn")
modulate_color = Color(0.385493, 0.385492, 0.385492, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vrkn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(0.101961, 0.427451, 0.698039, 0.8)
corner_radius_top_left = 16
corner_radius_top_right = 2
corner_radius_bottom_right = 16
corner_radius_bottom_left = 2
shadow_size = 5
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.152941, 0.513726, 0.819608, 0.72549)
corner_radius_top_left = 16
corner_radius_top_right = 2
corner_radius_bottom_right = 16
corner_radius_bottom_left = 2
shadow_size = 5
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(0.152941, 0.513726, 0.819608, 0.854902)
corner_radius_top_left = 16
corner_radius_top_right = 2
corner_radius_bottom_right = 16
corner_radius_bottom_left = 2
shadow_size = 5
shadow_offset = Vector2(0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu7sn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jix8l")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.0
offset_top = 88.0
offset_right = 115.0
offset_bottom = 134.32
grow_horizontal = 2
theme_override_colors/font_color = Color(0.152941, 0.513726, 0.819608, 1)
theme_override_fonts/font = ExtResource("2_fu7sn")
theme_override_font_sizes/font_size = 70
text = "Chronosolaris"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -1.0
offset_right = 168.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.787759, 0.787759, 0.787759, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_fu7sn")
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "START"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.787759, 0.787759, 0.787759, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_fu7sn")
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "SETTINGS
"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.787759, 0.787759, 0.787759, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_fu7sn")
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vrkn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
text = "EXIT
"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jix8l")
volume_db = -30.0
autoplay = true
bus = &"Music"
parameters/looping = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
